Delete user after tests
