# apps/server/cypress/support/e2e.ts
@@ -26,5 +26,20 @@ Cypress.on('uncaught:exception', () => {
   return false
 })
 
+beforeEach(() => {
+  Cypress.env('userId', crypto.randomUUID())
+})
+
+afterEach(() => {
+  const testProviders = ['mx_int', 'sophtron']
+  const userId = Cypress.env('userId')
+
+  if (userId) {
+    testProviders.forEach((provider) => {
+      cy.deleteUser(userId, provider)
+    })
+  }
+})
+
 // Alternatively you can use CommonJS syntax:
 // require('./commands')
