# openApiDocumentation.json
@@ -105,7 +105,8 @@
             "in": "query",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "enum": ["mx", "mx_int", "sophtron"]
             }
           },
           {
@@ -153,7 +154,8 @@
             "in": "query",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "enum": ["mx", "mx_int", "sophtron"]
             }
           },
           {
@@ -209,7 +211,8 @@
             "in": "query",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "enum": ["mx", "mx_int", "sophtron"]
             }
           },
           {
@@ -243,6 +246,30 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/user/:user_id": {
+      "delete": {
+        "parameters": [
+          {
+            "description": "The provider for the connected user",
+            "name": "provider",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": ["mx", "mx_int", "sophtron"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "204": {
+            "description": "Success"
           }
         }
       }
